--- a/INSTRUCTIONS.mdx
+++ b/INSTRUCTIONS.mdx
@@ -4,74 +4,70 @@
 
 ## 📝 Tes notes
 
-Detaille ce que tu as appris ici, sur une page [Notion](https://go.mikecodeur.com/course-notes-template)
+Détaille ce que tu as appris ici, sur une page [Notion](https://go.mikecodeur.com/course-notes-template)
 
 ## Comprendre
 
-Dans les modules précèdent nous avons vu
+Dans les modules précédents, nous avons vu
 
-- Le rendu coté server (SSR) avec les React Server Components.
-- Le rendu coté client (CSR) avec les React Client Components.
+- Le rendu côté serveur (`SSR`) avec les `React Server Components`.
+- Le rendu côté client (`CSR`) avec les `React Client Components`.
 
-Nous allons aller plus en profondeur sur la manière dont Next gère tout cela. Rappel sur le SSR
+Nous allons aller plus en profondeur sur la manière dont `Next` gère tout cela. Rappel sur le `SSR`
 
 - Tout d'abord, toutes les données pour une page donnée sont récupérées sur le serveur.
-- Ensuite, le serveur rend le HTML pour la page.
-- Le HTML, le CSS et le JavaScript de la page sont envoyés au client.
-- Une interface utilisateur non interactive est affichée en utilisant le HTML et le CSS générés.
-- Enfin, React **hydrate** l'interface utilisateur pour la rendre interactive.
+- Ensuite, le serveur rend le `HTML` pour la page.
+- Le `HTML`, le `CSS` et le `JavaScript` de la page sont envoyés au client.
+- Une interface utilisateur non interactive est affichée en utilisant le `HTML` et le `CSS` générés.
+- Enfin, `React` **hydrate** l'interface utilisateur pour la rendre interactive.
 
-![img](/course/server-rendering-without-streaming-chart.avif)
+[server-rendering-without-streaming-chart.avif](/course/server-rendering-without-streaming-chart.avif)
 
-📑 Le liens vers la doc [https://rc.nextjs.org/docs/app/building-your-application/routing/loading-ui-and-streaming#what-is-streaming](https://rc.nextjs.org/docs/app/building-your-application/routing/loading-ui-and-streaming#what-is-streaming)
+📑 Le lien vers la doc [https://rc.nextjs.org/docs/app/building-your-application/routing/loading-ui-and-streaming#what-is-streaming](https://rc.nextjs.org/docs/app/building-your-application/routing/loading-ui-and-streaming#what-is-streaming)
 
-On pourrait croire que le processus `SSR` ne concerne que les composants server (RSC). Par exemple dans cet arbre de composant, on pourrait penser que le rendu SSR concerne les RSC et le rendu des RCC se fait uniquement du coté client (`CSR`).
+On pourrait croire que le processus `SSR` ne concerne que les composants serveur (`RSC`). Par exemple, dans cet arbre de composant, on pourrait penser que le rendu `SSR` concerne les `RSC` et le rendu des `RCC` se fait uniquement du côté client (`CSR`).
 
-![img](/course/rcc-rsc-tree.png)
+![rcc-rsc-tree.png](/course/rcc-rsc-tree.png)
 
-En réalité le SSR concerne tout l’arbre de composants. RSC et RCC compris. Les RCC sont donc rendus 2 fois.
+En réalité le `SSR` concerne tout l’arbre de composants. `RSC` et `RCC` compris. Les `RCC` sont donc rendus 2 fois.
 
-Par exemple, ce RCC est rendu **une fois sur le server** sans code client (interaction client etc …) Par exemple ce composant est rendu
+Par exemple, ce `RCC` est rendu **une fois sur le serveur** sans code client (interaction client etc…) Par exemple ce composant est rendu
 
 ```tsx
 export default function ClientComponent() {
-	const handleClick = () => {alert('Hi')}
-	return (
-    <button onClick={handleClick}>Click here</button>
-  )
+  const handleClick = () => {
+    alert('Hi')
+  }
+  return <button onClick={handleClick}>Click here</button>
 }
 ```
 
-Devient SSR
+Devient `SSR`
 
 ```tsx
 <button>Click here</button>
 ```
 
-**Et un rendu ensuite sur le client avec hydration (ajout des events et code)**
+**Et un rendu ensuite sur le client avec hydratation (ajout des events et code)**
 
 ```tsx
 //handleClick est contenu dans le bundle/chunk.js
 <button onClick={handleClick}>Click here</button>
 ```
 
-On a déjà vu plusieurs fois les bénéfice de ce type de découpage. Mais il faut bien prendre en compte que 2 rendus distinct sont fait. Et pour pouvoir hydrater correctement les contenus doivent être cohérent et identiques. Si le contenu rendu sur le server, diffère du contenu rendu sur le client, des warnings et erreurs sont lévés. Prenons l’exemple suivant :
+On a déjà vu plusieurs fois les bénéfices de ce type de découpage. Mais il faut bien prendre en compte que 2 rendus distincts sont faits. Et pour pouvoir hydrater correctement, les contenus doivent être cohérents et identiques. Si le contenu rendu sur le serveur diffère du contenu rendu sur le client, des warnings et erreurs sont levées. Prenons l’exemple suivant :
 
 ```tsx
 export default function ClientComponent() {
-	const date = new Date().toString()
-	return (
-    <div>
-      {date}
-    </div>
-  )
+  const date = new Date().toString()
+  return <div>{date}</div>
 }
 // SSR date : Tue Jul 02 2024 14:18:53 GMT+0800
 // Le rendu client arrive après
 // CSR date : Tue Jul 02 2024 14:18:54 GMT+0800
 ```
 
-Next va alors lever une errors
+`Next` va alors lever une erreur :
 
 ```tsx
 Unhandled Runtime Error
@@ -86,17 +82,17 @@ Error: Minified React error #425
 
 ## Exercice
 
-**🐶** Dans cet exercice tu vas devoir corriger les erreurs et warnings liés à l’hydratation.
+**🐶** Dans cet exercice, tu vas devoir corriger les erreurs et warnings liés à l’hydratation.
 
 - Errors :
   - Imbrication div dans `<p>`
-  - Pour la `date`, split supprime le temps (HH MM SS)
+  - Pour la `date`, split supprime le temps (`HH MM SS`)
 - Warning
-  - Utilise `suppressHydrationWarning` dans un élément html
+  - Utilise `suppressHydrationWarning` dans un élément `HTML`.
     - Doc : https://nextjs.org/docs/messages/react-hydration-error#solution-3-using-suppresshydrationwarning
 
 <aside>
-💡 Rafraichie la page (F5) et navigue pour voir la différence de comportement
+💡 Rafraîchie la page (F5) et navigue pour voir la différence de comportement
 
 </aside>
 
@@ -106,21 +102,21 @@ Fichiers
 
 ## Bonus
 
-### 1. 🚀 render après hydration
+### 1. 🚀 Render après hydration
 
-Dans l’exercice précédent nous avons corrigé les erreurs d’hydrations mais les comportements ne sont pas ceux que nous souhaitons.
+Dans l’exercice précédent, nous avons corrigé les erreurs d’`hydratation`, mais les comportements ne sont pas ceux que nous souhaitons.
 
-- La Date a du être tronquée (or nous voulons afficher une vrai `date and time`)
+- La Date a dû être tronquée (or nous voulons afficher une vraie `date and time`)
 - Le rendu est bleu (serveur) or il devrait être rouge (client)
 
-Il manque une dernière étape (si le rendu client diffère du serveur), il manque un rendering. Il faut garder ce schéma en tête
+Il manque une dernière étape (si le rendu client diffère du serveur), il manque un rendering. Il faut garder ce schéma en tête.
 
 ```tsx
 SSR -> Client Loading -> Hydration -> CSR (useEffect)
 // utilise le composant <Phases> pour logger les differentes phases
 ```
 
-Pour effectuer un rendu supplémentaire ET qui ne pose pas de problème de d’hydratation il est possible d’utiliser
+Pour effectuer un rendu supplémentaire ET qui ne pose pas de problème d’`hydratation`, il est possible d’utiliser :
 
 ```tsx
 const [hydrated, setHydrated] = useState(false)
@@ -134,15 +130,15 @@ useEffect(() => {
 
 ### Explication
 
-- Lors du SSR `hydrated` est `false`
-- Lors de l’hydratation `hydrated` est toujours à `false` (pas d’erreur)
-- Après hydratation nous utilisons `useEffect` pour effectuer `en re-render`
+- Lors du `SSR` `hydrated` est `false`
+- Lors de l’`hydratation` `hydrated` est toujours à `false` (pas d’erreur)
+- Après `hydratation` nous utilisons `useEffect` pour effectuer `en re-render`
 
-🐶 Utilise cet technique pour afficher correctement la Date et le Style (blue/Red) en te basant sur `hydrated`.
+🐶 Utilise cette technique pour afficher correctement la Date et le Style (blue/Red) en te basant sur `hydrated`.
 
 - Remet : **🤖**`const date = new Date().toString()`
 
-ps : tu peux supprimer `suppressHydrationWarning` car il ne devrait pas y avoir de warning sur le style
+PS : Tu peux supprimer `suppressHydrationWarning` car il ne devrait pas y avoir de warning sur le style.
 
 Fichiers
 
@@ -162,4 +158,4 @@ Fichiers
 
 ## 🐜 Feedback
 
-Remplir le formulaire le [formulaire de FeedBack](https://go.mikecodeur.com/cours-next-avis?entry.1912869708=Next%20PRO&entry.1430994900=Rendering%20Avancée&entry.533578441=08%20hydration).
+Remplir le formulaire le [formulaire de FeedBack](https://go.mikecodeur.com/cours-next-avis?entry.1912869708=Next%20PRO&entry.1430994900=04%20Rendering%20Avancée&entry.533578441=08%20Hydration).
