--- a/INSTRUCTIONS.mdx
+++ b/INSTRUCTIONS.mdx
@@ -4,7 +4,7 @@
 
 ## 📝 Tes notes
 
-Detaille ce que tu as appris ici, sur une page [Notion](https://go.mikecodeur.com/course-notes-template)
+Détaille ce que tu as appris ici, sur une page [Notion](https://go.mikecodeur.com/course-notes-template)
 
 ## Comprendre
 
@@ -20,11 +20,11 @@ Il existe d’autres méthodes pour effectuer des rendus dynamiques. Une assez u
 - The `fetchCache` route segment option is configured to skip cache by default.
 - The `fetch` request uses `Authorization` or `Cookie` headers and there's an uncached request above it in the component tree.
 
-📑 Le liens vers la doc https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#opting-out-of-data-caching
+📑 Le lien vers la doc https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#opting-out-of-data-caching
 
 ## Exercice
 
-Dans cet exercice tu vas devoir faire un rendu dynamique en utilisant la fonction [noStore](https://nextjs.org/docs/app/api-reference/functions/unstable_noStore)
+Dans cet exercice, tu vas devoir faire un rendu dynamique en utilisant la fonction [noStore](https://nextjs.org/docs/app/api-reference/functions/unstable_noStore)
 
 Fichiers
 
@@ -40,15 +40,15 @@ Il existe une option de route pour rendre le contenu dynamique.
 export const dynamic = 'force-dynamic'
 ```
 
-**🐶** Utilise `force-dynamic` pour faire du rendu dynamique
+**🐶** Utilise `force-dynamic` pour faire du rendu dynamique.
 
 Fichiers
 
 - `/exercises/dynamic-rendering/cache-options/page.tsx`
 
-### 2. 🚀 revalidate
+### 2. 🚀 Revalidate
 
-Utilise une [revalidation basé sur le temps](https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#time-based-revalidation)
+Utilise une [revalidation basée sur le temps](https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#time-based-revalidation)
 
 ```tsx
 export const revalidate = 0
@@ -72,8 +72,4 @@ Fichiers
 
 ## 🐜 Feedback
 
-Remplir le formulaire le formulaire de FeedBack.
-
-```jsx
-https://go.mikecodeur.com/cours-next-avis?entry.1912869708=Next%20PRO&entry.1430994900=Rendering%20Avancée&entry.533578441=04%20dynamic-rendering-cache
-```
+Remplir le formulaire le [formulaire de FeedBack](https://go.mikecodeur.com/cours-next-avis?entry.1912869708=Next%20PRO&entry.1430994900=04%20Rendering%20Avancée&entry.533578441=04%20dynamic-rendering-cache).
