--- a/INSTRUCTIONS.mdx
+++ b/INSTRUCTIONS.mdx
@@ -49,7 +49,7 @@ import {getPostById} from '@/db/sgbd'
 const post = await getPostById(params.id)
 ```
 
-_PS : pense à cause où le post n’est pas trouvé._
+_PS : pense à gérer le cas où le post n’est pas trouvé._
 
 Fichiers
 
