--- a/INSTRUCTIONS.mdx
+++ b/INSTRUCTIONS.mdx
@@ -43,11 +43,7 @@ export default function Counter() {
 
 Si le développeur oublie la directive, `Next` va détecter que c’est du code client et va générer une erreur
 
-[use-client-directive.avif](/course/use-client-directive.avif)
-
-```tsx
 ![use-client-directive.avif](/course/use-client-directive.avif)
-```
 
 📑 Le lien vers la doc [https://nextjs.org/docs/app/building-your-application/rendering/client-components](https://nextjs.org/docs/app/building-your-application/rendering/client-components)
 
@@ -66,7 +62,7 @@ export default async function Page() {
   )
 ```
 
-Mais nous voulons utiliser un `RCC`, un simple composant `<Counter />`
+Nous voulons utiliser un `RCC`, un simple composant `<Counter />`
 
 🐶 Ajoute le compteur dans `page.tsx` et adapte le `Counter` si nécessaire.
 
