--- a/INSTRUCTIONS.mdx
+++ b/INSTRUCTIONS.mdx
@@ -21,7 +21,7 @@ Nous allons aller plus en profondeur sur la manière dont `Next` gère tout cela
 - Une interface utilisateur non interactive est affichée en utilisant le `HTML` et le `CSS` générés.
 - Enfin, `React` **hydrate** l'interface utilisateur pour la rendre interactive.
 
-[server-rendering-without-streaming-chart.avif](/course/server-rendering-without-streaming-chart.avif)
+![server-rendering-without-streaming-chart.avif](/course/server-rendering-without-streaming-chart.avif)
 
 📑 Le lien vers la doc [https://rc.nextjs.org/docs/app/building-your-application/routing/loading-ui-and-streaming#what-is-streaming](https://rc.nextjs.org/docs/app/building-your-application/routing/loading-ui-and-streaming#what-is-streaming)
 
